# fastapi-sandbox

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  test.yml
app/: main.py
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: users.py
app/container/: container.py
app/core/: config.py  constants.py  decorators.py  exception_handlers.py  exceptions.py  logger.py  types.py
app/dependencies/: user.py
app/domain/user/: entity.py  i_user_repository.py
app/infrastructure/: constants.py
app/infrastructure/datasource/: dynamodb.py
app/infrastructure/repository/: user_dynamodb_repository.py
app/middleware/: logging_middleware.py
app/schemas/: user.py
app/usecase/user/: create_user_usecase.py  get_user_usecase.py  list_users_usecase.py  search_users_usecase.py  user_service.py
docs/plans/: 2026-02-17-user-api-design.md  2026-02-17-user-api-plan.md  2026-02-18-onion-architecture-design.md  2026-02-18-onion-architecture-plan.md
tests/: conftest.py  test_logging.py  test_users.py
tests/core/: conftest.py  test_decorators.py
tests/domain/: conftest.py  test_user_entity.py
tests/infrastructure/: conftest.py  test_repository_errors.py
tests/usecase/: conftest.py  test_user_usecases.py
