[project]
name = "fastapi-sandox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.50",
    "email-validator>=2.3.0",
    "fastapi>=0.129.0",
    "injector>=0.24.0",
    "pydantic-settings>=2.13.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "RUF",  # ruff-specific rules
]
ignore = [
    "ANN401", # any type
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]
